Fixed an oversight where text on login pages was too light to be seen

--- a/src/overrides.css
+++ b/src/overrides.css
@@ -91,8 +91,15 @@ a:hover {
     color: #7fc0ff;
 }
 
-.light-text {
-    color: white;
+.dark-text {
+    color: black;
+}
+
+.dark-link {
+    color: #ff6a00;
+    font-weight: 600;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .mobile {
